...
        let toolbar = UIToolbar()
        toolbar.sizeToFit()
        let doneButton = UIBarButtonItem(barButtonSystemItem: .done, target: self, action: #selector(doneButtonTapped))
        toolbar.setItems([doneButton], animated: true)
        dateTextField.inputAccessoryView = toolbar

        typeTextField.placeholder = "Knife Type"
        typeTextField.borderStyle = .roundedRect
        typeTextField.accessibilityIdentifier = "Knife Type"
        addDoneButtonOnKeyboard(to: typeTextField)

        nameTextField.placeholder = "Knife Name"
        nameTextField.borderStyle = .roundedRect
        nameTextField.accessibilityIdentifier = "Knife Name"
        addDoneButtonOnKeyboard(to: nameTextField)

        imageView.contentMode = .scaleAspectFit
        imageView.backgroundColor = .lightGray
...
